<resources>
    <string name="app_name">Allied1</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_user_profile">School Student</string>
    <string-array name="Branch_Names">
        <item> MECHANICAL </item>
        <item> ELECTRICAL </item>
        <item> CIVIL </item>
        <item> ELECTRONICS AND COMMUNICATION </item>
        <item> COMPUTER </item>
        <item> INFORMATION TECHNOLOGY </item>
        <item> CHEMICAL </item>
        <item> METALLURGY </item>
        <item> MECHATRONICS </item>
        <item> AUTOMOBILE </item>
        <item> INSTRUMENTATION AND CONTROL </item>
        <item> AERONAUTICAL </item>
    </string-array>
<string name="Mech_Desc">
    Mechanical engineering is the discipline that applies the principles of engineering, physics, and materials science for the design, analysis, manufacturing, and maintenance of mechanical systems. 
    \n\nIt is the branch of engineering that involves the design, production, and operation of machinery.
    \n\nThe engineering field requires an understanding of core concepts including mechanics, kinematics, thermodynamics, materials science, structural analysis, and electricity.\n

</string>
    <string name="Elec_Desc">
        Electrical engineering is a field of engineering that generally deals with the study and application of electricity, electronics, and electromagnetism.
        \n\nElectrical engineering has now subdivided into a wide range of subfields including electronics, digital computers, power engineering, telecommunications, control systems, radio-frequency engineering, signal processing, instrumentation, and microelectronics.\n
    </string>
<string name="Civil_Desc">
    Civil engineering is a professional engineering discipline that deals with the design, construction, and maintenance of the physical and naturally built environment, including works like roads, bridges, canals, dams, and buildings.
    \n\nThe curriculum generally includes classes in physics, mathematics, project management, design and specific topics in civil engineering.\n

</string>
    <string name="Ec_Desc">
        Electronics engineering, or electronic engineering, is an engineering discipline which utilizes non-linear and active electrical components (such as semiconductor devices, especially transistors, diodes and integrated circuits) to design electronic circuits, devices, Microprocessors/Microcontrollers and systems including VHDL Modelling for Programmable logic devices and FPGAs.
        \n\nThe discipline typically also designs passive electrical components, usually based on printed circuit boards.\n
    </string>
    <string name="Comp_Desc">
        Computer engineering is a discipline that integrates several fields of electrical engineering and computer science required to develop computer hardware and software.
        \n\nComputer engineers usually have training in electronic engineering (or electrical engineering), software design, and hardware-software integration instead of only software engineering or electronic engineering.
        \n\nComputer engineers are involved in many hardware and software aspects of computing, from the design of individual microcontrollers, microprocessors, personal computers, and supercomputers, to circuit design.\n
    </string>
    <string name="It_Desc">
        Information technology (IT) is the application of computers to store, retrieve, transmit and manipulate data.
        \n\nThe term is commonly used as a synonym for computers and computer networks, but it also encompasses other information distribution technologies such as television and telephones.\n
    </string>
    <string name="Chem_Desc">
        Chemical engineering is a branch of engineering that applies physical sciences (physics and chemistry) and life sciences (microbiology and biochemistry) together with applied mathematics and economics to produce, transform, transport, and properly use chemicals, materials and energy.
        \n\nChemical engineers design large-scale processes that convert chemicals, raw materials, living cells, microorganisms and energy into useful forms and products.\n
    </string>
    <string name="Metal_Desc">
        Metallurgy is a domain of materials science and engineering that studies the physical and chemical behavior of metallic elements, their intermetallic compounds, and their mixtures, which are called alloys.
        \n\nMetallurgy is also the technology of metals: the way in which science is applied to the production of metals, and the engineering of metal components for usage in products for consumers and manufacturers.
        \n\nThe production of metals involves the processing of ores to extract the metal they contain, and the mixture of metals, sometimes with other elements, to produce alloys.\n
    </string>
    <string name="Mecha_Desc">
        Mechatronics is a multidisciplinary field of engineering that includes a combination of systems engineering, mechanical engineering, electrical engineering, telecommunications engineering, control engineering and computer engineering.
        \n\nAs technology advances, the sub-fields of engineering multiply and adapt. Mechatronics aim is a design process that unifies these subfields.
        \n\nOriginally, mechatronics just included the combination of mechanics and electronics, hence the word is a combination of mechanics and electronics; however, as technical systems have become more and more complex the word has been broadened to include more technical areas.\n

    </string>
    <string name="Auto_Desc">
        Automobile Engineering is a branch of engineering which deals with designing, manufacturing and operating automobiles.
        \n\nIt is a segment of vehicle engineering which deals with motorcycles, buses, trucks, etc.
        \n\nIt includes mechanical, electrical, electronic, software and safety elements.\n

    </string>
    <string name="Ic_Desc">
        Instrumentation is defined as the art and science of measurement and control of process variables within a production or manufacturing area.
        \n\nThe process variables used in industries are Level, Pressure, Temperature, Humidity, Flow, pH, Force, Speed etc.
        \n\nControl engineering or control systems engineering is the engineering discipline that applies control theory to design systems with desired behaviors.
        \n\nControl engineers are responsible for the research, design, development and control devices/systems, typically in manufacturing facilities and plants.\n
    </string>
    <string name="Aero_Desc">
       Aeronautics is the science or art involved with the study, design, and manufacturing of air flight capable machines, and the techniques of operating aircraft and rockets within the atmosphere.
        \n\nThe term "aviation" is sometimes used interchangeably with aeronautics, although "aeronautics" includes lighter-than-air craft such as airships, and includes ballistic vehicles while "aviation" technically does not.
        \n\nA significant part of aeronautical science is a branch of dynamics called aerodynamics, which deals with the motion of air and the way that it interacts with objects in motion, such as an aircraft.\n

    </string>
<string name="verbalsection">
    The computer-based verbal sections assess reading comprehension, critical reasoning, and vocabulary usage.\n
    Each verbal section consists of 20 questions to be completed in 30 minutes.
    Each verbal section consists of about 6 text completion, 4 sentence equivalence, and 10 critical reading questions.
</string>
    <string name="quant_desc">
        The computer-based quantitative sections assess basic high school level mathematical knowledge and reasoning skills.
        each quantitative section consists of 20 questions to be completed in 35 minutes.
        Each quantitative section consists of about 8 quantitative comparisons, 9 problem solving items, and 3 data interpretation questions.
    </string>
    <string name="analyticw_desc">
        The analytical writing section consists of two different essays, an "issue task" and an "argument task".
        The essays are written on a computer using a word processing program specifically designed by ETS
    </string>
    <string name="issuetask_Desc">
        The test taker is given 30 minutes to write an essay about a selected topic.
        Issue topics are selected from a pool of questions, which the GRE Program has published in its entirety.
        Individuals preparing for the GRE may access the pool of tasks on the ETS website.
    </string>
    <string name="arg_desc">
        The test taker will be given an argument and will be asked to write an essay that critiques the argument.
         Test takers are asked to consider the argument\'s logic and to make suggestions about how to improve the logic of the argument.
        Test takers are expected to address the logical flaws of the argument.
        The time allotted for this essay is 30 minutes
    </string>
    <string name="exp_desc">
        The experimental section, which can be either verbal or quantitative, contains new questions ETS is considering for future use. Although the experimental section does not count towards the test-taker\'s score, it is unidentified and appears identical to the scored sections.
        Because test takers have no definite way of knowing which section is experimental, it is typically advised that test takers try their best on every section.
        Sometimes an identified research section at the end of the test is given instead of the experimental section
    </string>
    <string name="prelim_desc">The pattern includes two papers of two hours duration and 200 marks each. Both papers have multiple choice objective type questions only.\n
    Paper I tests the candidate\'s knowledge on current events, history of India and Indian national movement, Indian and world geography, Indian polity and governance, economic and social development, environmental ecology, biodiversity, climate change and general science.\n
Paper II tests the candidates\' skills in comprehension, interpersonal skills, communication, logical reasoning, analytical ability, decision making, problem solving, basic numeracy, data interpretation, English language comprehension skills and mental ability</string>
    <string name="mains_desc">The Civil Services Mains Examination consists of a written examination and an interview.The written examination consists of nine papers, two qualifying in nature. The written exam consists of 7 papers.</string>
    <string name="pinterview_desc">Officially called the \"Personality Test\", the objective of the interview is to assess the personal suitability of the candidate for a career in public service by a board of competent and unbiased observers. The test is intended to evaluate the mental calibre of a candidate. In broad terms, this is really an assessment of not only a candidate\'s intellectual qualities, but also social traits and interest in current affairs. Some of the qualities to be judged are mental alertness, critical powers of assimilation, clear and logical exposition, balance of judgement, variety and depth of interest, ability for social cohesion and leadership, and intellectual and moral integrity</string>
</resources>