<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:textStyle="bold"
                        android:id="@+id/sectiontv"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Sections"/>

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:layout_toLeftOf="@+id/sectiontv"
                        android:layout_alignParentRight="true"
                        android:gravity="right"/>

                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:textStyle="bold"
                        android:id="@+id/verbalsectiontv"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Preliminary exam"
                        />

                    <TextView
                        android:layout_below="@+id/verbalsectiontv"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prelim_desc"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:textStyle="bold"
                        android:id="@+id/quanttv"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mains"/>

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_below="@+id/quanttv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mains_desc"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Analywsec"
                        android:text="Personality Test(interview)"/>

                    <TextView
                        android:layout_below="@+id/Analywsec"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pinterview_desc"/>


                </RelativeLayout>
            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_centerInParent="true"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/time"
                        android:src="@mipmap/time"
                        />


                    <TextView
                        android:layout_centerInParent="true"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/issuetasktv"
                        android:text="Exam Duration"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_centerInParent="true"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ibt"
                        android:src="@mipmap/ibt"
                        />
                    <TextView
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@+id/ibt"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ibttv"
                        android:text="General Studies"
                        android:layout_alignParentBottom="true"/>

                    <TextView
                        android:layout_centerInParent="true"

                        android:gravity="right"
                        android:layout_toRightOf="@+id/ibttv"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="120 minutes"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_centerInParent="true"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pbt"
                        android:src="@mipmap/pbt"
                        />
                    <TextView
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@+id/pbt"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pbttv"
                        android:text="Aptitude Test"
                        android:layout_alignParentBottom="true"/>

                    <TextView
                        android:layout_centerInParent="true"

                        android:gravity="right"
                        android:layout_toRightOf="@+id/pbttv"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="120 minutes"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/question"
                        android:src="@mipmap/question"
                        />

                    <TextView
                        android:layout_centerInParent="true"
                        android:textStyle="bold"
                        android:layout_toRightOf="@+id/question"
                        android:text="Papers"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/argtv"/>

                    <TextView
                        android:gravity="right"
                        android:layout_toRightOf="@+id/argtv"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="9 (2 Qualifying)"
                        android:layout_centerInParent="true"
                        android:id="@+id/textView" />


                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>